--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@
              <li><a href="#">Terms</a></li>
              <li><a href="#">Settings</a></li>
          </ul>
-     </footer>
+     </footer> <!-- Footer -->
 </body>
 </html>
