index.html was updated _header.scss updated _section.scss updated

--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
              <img id="keyboard" src="images/keyboard.png" alt="keyboard">
              <img id="microphone" src="images/google_microphone.png" alt="microphone">
          </div>
+
+         <div class="btn-container">
+            <button type="submit" id="btn1">Google Search</button>
+            <button type="submit" id="btn2">I'm Feeling Luccky</button>
+        </div>
+        <div class="lang">
+            <p id="language">Other languages You Can Use Google : <a href="#">Turkish</a></p>
+        </div>
      </main> <!-- Main Context -->
 
      <footer>
